# gpumod6

./: .gitignore  README.md
.github/workflows/: run-and-screenshot.yml
GPEMODER/: auto_inject.bat  gpu_swap.json
GPEMODER/gui/: CMakeLists.txt  abouttab.cpp  abouttab.h  autostarttab.cpp  autostarttab.h  build.bat  gpu_database.h  logstab.cpp  logstab.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  sidedrawer.cpp  sidedrawer.h  swaptab.cpp  swaptab.h  titlebar.cpp  titlebar.h
